apps/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.plagueworks.org
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/cloudflare-comment: "This is managed by ExternalDns in oke-poseidon-apps"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.plagueworks.org`)
      services:
        - name: argocd-server
          port: 80 
    - kind: Rule
      match: Host(`argocd.plagueworks.org`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: le
